--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,50 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <h2>Here are the nugget IDs: </h2>
-  <ol *ngIf="nuggetIds$ | async as nuggetIds">
-    <li *ngFor="let nuggetId of nuggetIds">{{nuggetId}}</li>
-  </ol>
-</div>
-<router-outlet></router-outlet>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #start>
+      <mat-nav-list (click)="start.close()">
+          <a mat-list-item routerLink="/login">
+              <mat-icon>account_circle</mat-icon>
+              <span> Login</span>
+          </a>
+          <a mat-list-item routerLink="/read">
+              <mat-icon>local_library</mat-icon>
+              <span> Read</span>
+          </a>
+          <a mat-list-item routerLink="/browse">
+              <mat-icon>library_books</mat-icon>
+              <span> Browse</span>
+          </a>
+          <a mat-list-item routerLink="/search">
+              <mat-icon>format_quote</mat-icon>
+              <span> Add Quote</span>
+          </a>
+          <a mat-list-item routerLink="/search">
+              <mat-icon>search</mat-icon>
+              <span> Search</span>
+          </a>
+          <a mat-list-item routerLink="/devotional">
+              <mat-icon>more</mat-icon>
+              <span> Devotionals &amp; Links</span>
+          </a>
+          <a mat-list-item routerLink="/memory">
+              <mat-icon>face</mat-icon>
+              <span> Memorize</span>
+          </a>
+          <a mat-list-item routerLink="/topic">
+              <mat-icon>chrome_reader_mode</mat-icon>
+              <span> Topics</span>
+          </a>
+          <a mat-list-item (click)="logout()">
+              <mat-icon>exit_to_app</mat-icon>
+              <span> Logout</span>
+          </a>
+      </mat-nav-list>
+  </mat-sidenav>
+  <mat-toolbar color="primary">
+      <button class="menu-button" mat-icon-button (click)="start.open('mouse')">
+          <mat-icon>menu</mat-icon>
+      </button>
+  </mat-toolbar>
+  <main>
+      <router-outlet></router-outlet>
+  </main>
+</mat-sidenav-container>
