--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+html, body {
+    font-family: Clan,'Helvetica Neue',Helvetica,Arial,sans-serif !important;
+    font-style: normal !important;
+}
