--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #start>
       <mat-nav-list (click)="start.close()">
-          <a mat-list-item routerLink="/login">
+        <a mat-list-item routerLink="/">
+            <mat-icon>home</mat-icon>
+            <span> Home</span>
+        </a>
+        <a mat-list-item routerLink="/login">
               <mat-icon>account_circle</mat-icon>
               <span> Login</span>
           </a>
