Moved the firing of the load nuggets action to the browse bible nuggets component.  Trying to have the effect check the store before calling the backend

--- a/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
+++ b/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
@@ -1,4 +1,7 @@
 There are {{nuggetIdCount$ | async}} nuggetIds.
-<ol *ngIf="nuggetIds$ | async as nuggetIds">
+<ol *ngIf="nuggetIds$ | async as nuggetIds; else loading">
     <li *ngFor="let nuggetId of nuggetIds">{{nuggetId}}</li>
 </ol>
+<ng-template #loading>
+    <mat-spinner></mat-spinner>
+</ng-template>
