Stopped using observables in template.  Now subscribing to the observable in typescript and shuffling it each time this component inits, but still only looking up the list one time

--- a/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
+++ b/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
@@ -1,5 +1,5 @@
-There are {{nuggetIdCount$ | async}} nuggetIds.
-<ol *ngIf="nuggetIds$ | async as nuggetIds; else loading">
+There are {{nuggetIds.length}} nuggetIds.
+<ol *ngIf="nuggetIds && nuggetIds.length; else loading">
     <li *ngFor="let nuggetId of nuggetIds">{{nuggetId}}</li>
 </ol>
 <ng-template #loading>
