--- a/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
+++ b/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
@@ -1,7 +1,16 @@
-There are {{nuggetIds.length}} nuggetIds.
-<ol *ngIf="nuggetIds && nuggetIds.length; else loading">
-    <li *ngFor="let nuggetId of nuggetIds">{{nuggetId}}</li>
-</ol>
+<div *ngIf="nuggetIds && nuggetIds.length; else loading">
+    <button mat-button (click)="showPrevNugget()">
+        <mat-icon>skip_previous</mat-icon>
+        Prev
+    </button>
+    <button mat-button (click)="showNextNugget()">
+        Next
+        <mat-icon>skip_next</mat-icon>
+    </button>
+    <br>
+    ({{(currentNuggetIndex + 1)}} of {{nuggetIds.length}})<br>
+    Currently selected: {{nuggetIds[currentNuggetIndex]}}.
+</div>
 <ng-template #loading>
     <mat-spinner></mat-spinner>
 </ng-template>
