Switched layout so that the card header and toolbar are stationary, but the card content scrolls.  Works well on mobile, but on desktop there is an inner and outer scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,10 +18,14 @@ html, body {
 	font-weight: bold;
 	line-height: 1.25em;
 	font-size: 1.9em;
-	height: 100%;
+	/* height: 100%; */
 }
 
 .bible_version {
 	/* color: rgba(183, 0, 255, 0.219); */
 	color: darkblue
+}
+
+.scrollable-card-content {
+  	overflow: auto;
 }
