--- a/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
+++ b/src/app/browse-bible-nuggets/browse-bible-nuggets.component.html
@@ -23,7 +23,7 @@
             </mat-toolbar-row>
         </mat-toolbar>
     </mat-card-actions>
-    <mat-card-content [style.height.px]="cardContentHeight" class="nugget-view scrollable-card-content"
+    <mat-card-content class="nugget-view scrollable-card-content"
         *ngIf="currentFormattedPassageText; else loadingPsgTxt" 
         [innerHTML]="currentFormattedPassageText">
     </mat-card-content>
