Some adjustments to the swipe feature and starting to build the browse quotes feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,11 @@
           </a>
           <a mat-list-item routerLink="/browse">
               <mat-icon>library_books</mat-icon>
-              <span> Browse</span>
+              <span> Browse Bible</span>
+          </a>
+          <a mat-list-item routerLink="/browsequotes">
+            <mat-icon>library_books</mat-icon>
+            <span> Browse Quotes</span>
           </a>
           <a mat-list-item routerLink="/search">
               <mat-icon>format_quote</mat-icon>
